--- a/bash/.envrc
+++ b/bash/.envrc
@@ -7,8 +7,5 @@ export PATH=$PATH:/sbin:/usr/local/sbin:/usr/sbin:$DOTFILESDIR/bin
 # python startup rc 
 export PYTHONSTARTUP="${HOME}/.pythonrc"
 
-# Here it goes
+# for better color support in tmux
 export TERM=xterm-256color
-
-export PANEL_FIFO="/tmp/panel-fifo"
-export PATH=$PATH:/home/spandya/workspace/bspwm/examples/panel
