Removed some work-related aliases. Fixed up the envrc.

--- a/bash/.envrc
+++ b/bash/.envrc
@@ -2,7 +2,7 @@
 export DOTFILESDIR=$HOME/workspace/dotfiles
 
 # PATH
-export PATH=$PATH:/sbin:/usr/local/sbin:/usr/sbin:$DOTFILESDIR/bin
+export PATH=$PATH:/sbin:/usr/local/sbin:/usr/sbin:$HOME/bin
 
 # python startup rc 
 export PYTHONSTARTUP="${HOME}/.pythonrc"
